[package]
name = "squab"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.64.0"
publish = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.32"
clap = { version = "4.0.10", features = ["derive", "string"] }
crossbeam-channel = "0.5.6"
flate2 = "1.0.14"
git-testament = "0.2.0"
interval-tree = { git = "https://github.com/zaeleus/interval-tree.git", rev = "e303d7254d53de5c418d6079d4b66c30c10958d4" }
mimalloc = { version = "0.1.26", default-features = false }
noodles = { version = "0.52.0", features = ["bam", "bgzf", "core", "gff", "sam"] }
noodles-bgzf = { version = "0.24.0", features = ["libdeflate"] }
thiserror = "1.0.40"
tracing = "0.1.25"
tracing-subscriber = "0.3.3"
