[package]
name = "squab"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.73.0"
publish = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.32"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
clap = { version = "4.0.10", features = ["derive", "string"] }
crossbeam-channel = "0.5.6"
flate2 = "1.0.14"
git-testament = "0.2.0"
interval-tree = { git = "https://github.com/zaeleus/interval-tree.git", rev = "e303d7254d53de5c418d6079d4b66c30c10958d4" }
mimalloc = { version = "0.1.26", default-features = false }
noodles = { version = "0.88.0", features = ["bam", "bgzf", "core", "gff", "sam"] }
noodles-bgzf = { version = "0.35.0", features = ["libdeflate"] }
thiserror = "2.0.11"
tracing = "0.1.25"
tracing-subscriber = "0.3.3"
