[package]
name = "squab"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"
publish = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.32"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
clap = { version = "4.0.10", features = ["derive", "string"] }
crossbeam-channel = "0.5.6"
flate2 = "1.0.14"
git-testament = "0.2.0"
indexmap = "2.7.1"
mimalloc = "0.1.43"
noodles = { version = "0.102.0", features = ["bam", "bgzf", "core", "gff", "sam"] }
noodles-bgzf = { version = "0.44.0", features = ["libdeflate"] }
rustc-hash = "2.1.1"
thiserror = "2.0.11"
tracing = "0.1.25"
tracing-subscriber = "0.3.3"
